# speakeasy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  SECURITY_AUDIT.md  progress.md  resources.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/audio/: mod.rs
src/chat/: mod.rs
src/crypto/: key_rotation.rs  mod.rs
src/dht/: mod.rs
src/files/: mod.rs
src/identity/: mod.rs
src/invite/: mod.rs
src/models/: mod.rs
src/qr/: mod.rs
src/storage/: mod.rs
src/sync/: mod.rs
src/transport/: mod.rs
src/tui/: mod.rs
src/ui_api/: mod.rs
src/veilid_node/: mod.rs
